WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147019
Fix disappearing position:fixed elemnets in fixed layout mode
https://bugs.webkit.org/show_bug.cgi?id=147019
Summary
Fix disappearing position:fixed elemnets in fixed layout mode
Simon Fraser (smfr)
Reported
2015-07-16 14:42:59 PDT
Fix disappearing position:fixed elemnets in fixed layout mode
Attachments
Patch
(6.58 KB, patch)
2015-07-16 14:48 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2015-07-16 14:48:55 PDT
Created
attachment 256929
[details]
Patch
Tim Horton
Comment 2
2015-07-16 14:51:30 PDT
Comment on
attachment 256929
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=256929&action=review
> Source/WebCore/ChangeLog:3 > + Fix disappearing position:fixed elemnets in fixed layout mode
elemnets
> Source/WebCore/rendering/RenderLayerCompositor.cpp:2745 > + viewBounds = m_renderView.unscaledDocumentRect();
we want to use the document rect and not the scrolled fixed layout size? I guess it doesn't really matter, this will only ever be bigger
Simon Fraser (smfr)
Comment 3
2015-07-16 14:56:21 PDT
https://trac.webkit.org/r186911
rdar://problem/21822541
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug